--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -34,19 +34,19 @@ jobs:
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Log in to GHCR
+      - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: docker.io
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push image
         uses: docker/build-push-action@v4
         with:
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/lab-1-app:${{ github.sha }}
-            ghcr.io/${{ github.repository_owner }}/lab-1-app:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/lab-1-app:${{ github.sha }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/lab-1-app:latest
 
   deploy-heroku:
     name: Deploy to Heroku (optional)
